--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               height="255"
             />
             <h3 class="team-list__title">Rostyslav Haluzinskiy</h3>
-            <p class="team-list__desc">Front-end developer</p>
+            <p class="team-list__desc">Team Lead </p>Front-end developer</p>
           </li>
           <li class="card-item team-list__item">
             <img
@@ -349,15 +349,15 @@
                   <li>HTML/CSS</li>
                   <li>Animate.css</li>
                   <li>JavaScript</li>
-                  <li>LightBox</li>
+                  <!-- <li>LightBox</li>
                   <li>Axios</li>
                   <li>React</li>
-                  <li>ReduxToolkit</li>
+                  <li>ReduxToolkit</li> -->
                   <li>Pagination</li>
                 </ul>
               </div>
             </li>
-            <li>
+            <!-- <li>
               <h3 class="technology__title-min">Back-End</h3>
               <div class="list__box">
                 <ul class="technology__list-min">
@@ -367,13 +367,12 @@
                   <li>Swagger</li>
                 </ul>
               </div>
-            </li>
+            </li> -->
             <li>
-              <h3 class="technology__title-min">Back-End</h3>
+              <h3 class="technology__title-min">Utilites</h3>
               <div class="list__box">
                 <ul class="technology__list-min">
                   <li>VSCode</li>
-                  <li>Webpack</li>
                   <li>Parcel</li>
                   <li>Figma</li>
                   <li>Git/GitHub</li>
