--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               height="255"
             />
             <h3 class="team-list__title">Rostyslav Haluzinskiy</h3>
-            <p class="team-list__desc">Team Lead </p>Front-end developer</p>
+            <p class="team-list__desc">Front-end developer</p>
           </li>
           <li class="card-item team-list__item">
             <img
